Add template TODOs

--- a/sections/info.tex
+++ b/sections/info.tex
@@ -1,24 +1,28 @@
 \newpage
-\pdfbookmark[section]{\infoname}{info} % add info page link to PDF bookmarks, but not table of contents itself
+\pdfbookmark[section]{\infoname}{info} % Add info page to PDF bookmarks (for convenience), but not to Table of Contents.
 
-%=== Info in English
+% Info in main language.
 \begin{info}
 \begin{abstract}
+% TODO: Add abstract.
 Many interpreting program languages are dynamically typed, such as Visual Basic or Python. As a result, it is easy to write programs that crash due to mismatches of provided and expected data types.  One possible solution to this problem is automatic type derivation during compilation. In this work, we consider study how to detect type errors in the \textsc{Whitespace} language by using fourth-order logic formulae as annotations. The main result of this thesis is a new triple-exponential type inference algorithm for the fourth-order logic formulae. This is a significant advancement as the question of whether there exists such an algorithm was an open question.
 All previous attempts to solve the problem lead to logical inconsistencies or require tedious user interaction in terms of interpretative dance. Although the resulting algorithm is slightly inefficient, it can be used to detect obscure programming bugs in the \textsc{Whitespace} language. The latter significantly improves productivity. Our practical experiments showed that productivity is comparable to average Java programmer.
 From a theoretical viewpoint, the result is only a small advancement in a rigorous treatment of higher-order logic formulae. The results obtained by us do not generalise to formulae with the fifth or higher order.
 \end{abstract}
 
+% TODO: Add keywords, separated by commas.
 \keywords{\TODO{List of keywords}}
-%Layout, formatting, template
 
 \cercs{\TODO{CERCS code and name:~\url{https://www.etis.ee/Portal/Classifiers/Details/d3717f7b-bec8-4cd9-8ea4-c89cd56ca46e}}}
 \end{info}
 
 
-%=== Info in Estonian
+% Info in other language.
+% TODO: Choose other language (estonian or english).
+% TODO: Fill in title in other language.
 \begin{otherinfo}{estonian}{Tüübituletus neljandat järku loogikavalemitele}
 \begin{abstract}
+% TODO: Add abstract in other language.
 \TODO{One or two sentences providing a basic introduction to the field, comprehensible to a scientist in
 any discipline.}
 \TODO{Two to three sentences of
@@ -38,8 +42,8 @@ if the editor considers that the accessibility of
 the paper is significantly enhanced by their inclusion.}
 \end{abstract}
 
+% TODO: Add keywords in other language, separated by commas.
 \keywords{\TODO{List of keywords}}
-%Layout, formatting, template
 
 \cercs{\TODO{CERCS kood ja nimetus:~\url{https://www.etis.ee/Portal/Classifiers/Details/d3717f7b-bec8-4cd9-8ea4-c89cd56ca46e}}}
 \end{otherinfo}
