--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -1,25 +1,10 @@
-% Use package babel for English or Estonian
-% If you use Estonian make sure that Estonian hyphenation is installed
-% - hypen-estonian or eehyp packages
-%
-%===Choose the main language in thesis
-\documentclass[estonian,english]{unitartucs-thesis} %the thesis is in English
-% \documentclass[english,estonian]{unitartucs-thesis} %the thesis is in Estonian
+% TODO: Choose thesis language.
+\documentclass[estonian,english]{unitartucs-thesis} % Thesis is in English, but info page also has Estonian.
+% \documentclass[english,estonian]{unitartucs-thesis} % Thesis is in Estonian, but info page also has English.
 
-% When you write in Estonian then you want to use text with right character set
-% By default LaTeX does not know what to do with õäöu letters. You have to specify
-% a correct input and font encoding. For that you have to Google the Web
-%
-% For TexShop under MacOS X. The right lines are
-%\usepackage[applemac]{inputenc}
-%\usepackage[T1]{fontenc} %Absolutely critical for *hyphenation* of words with non-ASCII letters.
-%
-% For Windows and Linux the right magic lines are
-% \usepackage[latin1]{inputenc}
-% \usepackage[latin5]{inputenc}
-%
-\usepackage[utf8]{inputenc} %standard encoding since 2018 (can be commented out?)
-\usepackage[T1]{fontenc} %Absolutely critical for *hyphenation* of words with non-ASCII letters.
+% Modern encoding, do not remove.
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
 
 % If you have problems with Estonian keywords in the bibliography
 % \usepackage{biblatex}
@@ -76,26 +61,35 @@
 \newtheorem{theorem}{Theorem}
 
 
+% TODO: Fill in title and author name.
 \title{Type Inference for Fourth Order Logic Formulae}
 \author{Alice Cooper}
+
+% TODO: Fill in supervisors. Use \and to separate multiple supervisors. Use \degree to specify their degree.
 \supervisor{Axel Rose\degree{MSc} \and May Flower\degree{PhD}}
+
+% TODO: Choose curriculum.
 \curriculum{Computer Science Curriculum}
 % \curriculum{Software Engineering Curriculum}
 % \curriculum{Informaatika õppekava}
+
+% TODO: Choose thesis type (bachelor's or master's) and number of ECTS.
 \thesis{Master's Thesis (30 ECTS)}
 % \thesis{Bakalaureusetöö (9 EAP)}
 % \thesis{Bachelor's Thesis (9 ECTS)}
+
+% Override year (on title page) and date (in licence). Defaults to today.
 % \date{2023-01-02}
 
 
 \begin{document}
 
-\maketitle % title page
-\input{sections/info} % info page
+\maketitle % Title page
+\input{sections/info} % Info page
 
-% table of contents
+% Table of Contents
 \newpage
-\pdfbookmark[section]{\contentsname}{toc} % add table of contents link to PDF bookmarks, but not table of contents itself
+\pdfbookmark[section]{\contentsname}{toc} % Add Table of Contents to PDF bookmarks (for convenience), but not to Table of Contents itself.
 \tableofcontents
 
 % Remember to remove this from the final thesis version
@@ -108,16 +102,16 @@
 \input{sections/other-data}
 \input{sections/conclusion}
 
-% BibLaTeX bibliography
-\clearpage % typeset all figures before bibliography and start new page
-\printbibliography[heading=bibintoc]
+% Bibliography
+\clearpage % Flush all floats (figures and tables) before bibliography and start new page.
+\printbibliography[heading=bibintoc] % Bibliography with heading also in Table of Contents.
 
-% appendices
+% Appendices
 \newpage
 \begin{appendices}
 
 \input{sections/glossary}
-\printlicence % licence
+\printlicence % Licence
 
 \end{appendices}
 
