--- a/unitartucs-thesis.bib
+++ b/unitartucs-thesis.bib
@@ -58,3 +58,83 @@
 
 @comment{jabref-meta: selector_keywords:}
 
+@book{ex5,
+  author = {Ain Isotamm},
+  publisher = {Tartu Ülikooli Kirjastus},
+  title = {Programmeerimiskeeled}, % should not be italic?
+  year = {2017},
+  location = {Tartu},
+}
+
+@thesis{ex6,
+  % type = {bathesis}, % translate
+  author = {E.-L. Margens},
+  title = {Informaatikaõpetajate täiendkoolituse küsitluse ettevalmistamine ja katsetamine}, % should not be in quotes?
+  year = {2005},
+  institution = {TÜ arvutiteaduse instituudi bakalaureusetöö},
+  % institution = {TÜ arvutiteaduse instituut},
+  url = {https://comserv.cs.ut.ee/ati_thesis/datasheet.php?id=46781&year=2015},
+  urldate = {2024-10-13}
+}
+
+@incollection{ex7,
+  author = {J. Engelbrecht},
+  booktitle = {Teadusmõte Eestis: tehnikateadused}, % should not have "In:
+  publisher = {Eesti
+Teaduste Akadeemia},
+  title = {Mehaanika --- lõputu hulk uusi probleeme}, % should not be in quotes?
+  year = {2002},
+  location = {Tallinn},
+  pages = {21-24}, % translate
+}
+
+@article{ex8,
+  author = {H.-J. Kaalep and M. Koit},
+  journal = {Keel ja Kirjandus},
+  number = {10},
+  title = {Kuidas masin tõlgib},
+  year = {2010},
+  pages = {726-738},
+}
+
+@incollection{ex9,
+  author = {S. Virkus},
+  booktitle = {Infofoorum},
+  publisher = {},
+  title = {Infokirjaoskus ja infokäitumine infouuringute kontekstis: I},
+  year = {2003},
+  url = {http://www.tlu.ee/i-foorum/ifoorum7/Artiklid/sirje.htm},
+  urldate = {2005-06-20},
+  number = {7}
+}
+
+@online{ex10,
+  label = {Wat},
+  title = {IBM Watson},
+  url = {http://www.ibm.com/smarterplanet/us/en/ibmwatson/},
+  urldate = {2016-08-26}
+}
+
+@reference{ex11,
+  label = {CePA},
+  title = {Elektrooniline krüptograafiliste publikatsioonide arhiiv Eprint},
+  url = {http://eprint.iacr.org/}
+}
+
+@reference{ex12,
+  editor = {Heikki Vallaste},
+  title = {e-Teatmik: IT ja sidetehnika seletav sõnaraamat},
+  url = {http://www.vallaste.ee/}
+}
+
+@online{chatgpt,
+  author = {{OpenAI}},
+  title = {ChatGPT (version)},
+  url = {https://chat.openai.com/}
+}
+
+@online{copilot,
+  author = {{Microsoft}},
+  title = {Microsoft Copilot (version)},
+  url = {https://copilot.microsoft.com/}
+}
