--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -9,7 +9,8 @@
 % If you have problems with Estonian keywords in the bibliography
 % \usepackage{biblatex}
 %\usepackage[backend=biber]{biblatex}
-\usepackage[style=alphabetic]{biblatex}
+\usepackage[style=unitartucs-alphabetic]{biblatex}
+% \usepackage[style=unitartucs-numeric]{biblatex}
 %% plain --> \usepackage[style=numeric]{biblatex}
 %% abbrv --> \usepackage[style=numeric,firstinits=true]{biblatex}
 %% unsrt --> \usepackage[style=numeric,sorting=none]{biblatex}
