Add autolang=other to unitartucs.bbx

--- a/unitartucs-thesis.bib
+++ b/unitartucs-thesis.bib
@@ -85,7 +85,8 @@ Teaduste Akadeemia},
   title = {Mehaanika --- lõputu hulk uusi probleeme}, % should not be in quotes?
   year = {2002},
   location = {Tallinn},
-  pages = {21-24}, % translate
+  pages = {21-24}, % translate,
+  langid = {estonian}
 }
 
 @article{ex8,
