--- a/unitartucs-thesis-template.tex
+++ b/unitartucs-thesis-template.tex
@@ -11,7 +11,7 @@
 \usepackage[style=unitartucs-numeric]{biblatex} % Numeric citations [1], alphabetically sorted bibliography.
 % \usepackage[style=unitartucs-numeric,sorting=none]{biblatex} % Numeric citations [1], bibliography in citation order.
 % \usepackage[style=unitartucs-alphabetic]{biblatex} % Alphabetic citations [ABC], alphabetically sorted bibliography.
-%\DefineBibliographyStrings{estonian}{and={ja}}
+\DeclareLanguageMapping{estonian}{unitartucs-estonian}
 \addbibresource{unitartucs-thesis.bib}
 
 
