--- a/unitartucs-thesis.bib
+++ b/unitartucs-thesis.bib
@@ -61,31 +61,30 @@
 @book{ex5,
   author = {Ain Isotamm},
   publisher = {Tartu Ülikooli Kirjastus},
-  title = {Programmeerimiskeeled}, % should not be italic?
+  title = {Programmeerimiskeeled},
   year = {2017},
   location = {Tartu},
 }
 
 @thesis{ex6,
-  % type = {bathesis}, % translate
+  type = {bathesis},
   author = {E.-L. Margens},
-  title = {Informaatikaõpetajate täiendkoolituse küsitluse ettevalmistamine ja katsetamine}, % should not be in quotes?
+  title = {Informaatikaõpetajate täiendkoolituse küsitluse ettevalmistamine ja katsetamine},
   year = {2005},
-  institution = {TÜ arvutiteaduse instituudi bakalaureusetöö},
-  % institution = {TÜ arvutiteaduse instituut},
+  institution = {TÜ arvutiteaduse instituut},
   url = {https://comserv.cs.ut.ee/ati_thesis/datasheet.php?id=46781&year=2015},
   urldate = {2024-10-13}
 }
 
 @incollection{ex7,
   author = {J. Engelbrecht},
-  booktitle = {Teadusmõte Eestis: tehnikateadused}, % should not have "In:
+  booktitle = {Teadusmõte Eestis: tehnikateadused},
   publisher = {Eesti
 Teaduste Akadeemia},
-  title = {Mehaanika --- lõputu hulk uusi probleeme}, % should not be in quotes?
+  title = {Mehaanika --- lõputu hulk uusi probleeme},
   year = {2002},
   location = {Tallinn},
-  pages = {21-24}, % translate,
+  pages = {21-24},
   langid = {estonian}
 }
 
@@ -131,11 +130,13 @@ Teaduste Akadeemia},
 @online{chatgpt,
   author = {{OpenAI}},
   title = {ChatGPT (version)},
+  year = {2022},
   url = {https://chat.openai.com/}
 }
 
 @online{copilot,
   author = {{Microsoft}},
   title = {Microsoft Copilot (version)},
+  year = {2024},
   url = {https://copilot.microsoft.com/}
 }
