Rename main file to thesis

--- a/thesis.tex
+++ b/thesis.tex
@@ -13,7 +13,7 @@
 % \usepackage[style=unitartucs-alphabetic]{biblatex} % Alphabetic citations [ABC], alphabetically sorted bibliography.
 \DeclareLanguageMapping{english}{unitartucs-english}
 \DeclareLanguageMapping{estonian}{unitartucs-estonian}
-\addbibresource{unitartucs-thesis.bib}
+\addbibresource{thesis.bib}
 
 
 % General packages for math in general, theorems and symbols
