--- a/sections/other-data.tex
+++ b/sections/other-data.tex
@@ -64,8 +64,8 @@ Tip: We can use minipage to create a frame around some important information.
 \frame{
 \begin{minipage}{\textwidth}
 \begin{enumerate}
-	\item integer division ($\opDiv$) -- only usable between \typeInt types
-	\item remainder ($\%$) -- only usable between \typeInt types
+	\item integer division ($\backslash\mathsf{div}$) -- only usable between $\mathsf{Int}$ types
+	\item remainder ($\%$) -- only usable between $\mathsf{Int}$ types
 \end{enumerate}
 \end{minipage}
 }
