Refactor info page TODOs

--- a/sections/info.tex
+++ b/sections/info.tex
@@ -4,46 +4,48 @@
 % Info in main language.
 \begin{info}
 \begin{abstract}
-% TODO: Add abstract.
+\todo{Add your own abstract.}%
+% Here are some suggestions:
+%   One or two sentences providing a basic introduction to the field, comprehensible to a scientist in
+%   any discipline.
+%   Two to three sentences of
+%   more detailed background, comprehensible to scientists in related disciplines.
+%   One sentence clearly stating the general problem being addressed by this particular
+%   study.
+%   One sentence summarising the main result (with the words ``here we show´´ or their equivalent).
+%   Two or three sentences explaining what
+%   the main result reveals in direct
+%   comparison to what was thought to be the case previously, or how the main result adds to previous knowledge.
+%   One or two sentences to put the results into a more general context.
+%   Two or three sentences to provide a
+%   broader perspective, readily
+%   comprehensible to a scientist in any
+%   discipline, may be included in the first paragraph
+%   if the editor considers that the accessibility of
+%   the paper is significantly enhanced by their inclusion.
 Many interpreting program languages are dynamically typed, such as Visual Basic or Python. As a result, it is easy to write programs that crash due to mismatches of provided and expected data types.  One possible solution to this problem is automatic type derivation during compilation. In this work, we consider study how to detect type errors in the \textsc{Whitespace} language by using fourth-order logic formulae as annotations. The main result of this thesis is a new triple-exponential type inference algorithm for the fourth-order logic formulae. This is a significant advancement as the question of whether there exists such an algorithm was an open question.
 All previous attempts to solve the problem lead to logical inconsistencies or require tedious user interaction in terms of interpretative dance. Although the resulting algorithm is slightly inefficient, it can be used to detect obscure programming bugs in the \textsc{Whitespace} language. The latter significantly improves productivity. Our practical experiments showed that productivity is comparable to average Java programmer.
 From a theoretical viewpoint, the result is only a small advancement in a rigorous treatment of higher-order logic formulae. The results obtained by us do not generalise to formulae with the fifth or higher order.
 \end{abstract}
 
-% TODO: Add keywords, separated by commas.
-\keywords{\TODO{List of keywords}}
+\keywords{Type inference, fourth-order logic, \textsc{Whitespace} language \todo{Add your own keywords, separated by commas.}}
 
-\cercs{\TODO{CERCS code and name:~\url{https://www.etis.ee/Portal/Classifiers/Details/d3717f7b-bec8-4cd9-8ea4-c89cd56ca46e}}}
+% TODO: Choose CERCS from https://www.etis.ee/Portal/Classifiers/Index/26?. Common choices below.
+\cercs{P170 Computer science, numerical analysis, systems, control \todo{Choose CERCS.}}
+% \cercs{P175 Informatics, systems theory}
 \end{info}
 
 
 % Info in other language.
 % TODO: Choose other language (estonian or english).
-% TODO: Fill in title in other language.
-\begin{otherinfo}{estonian}{Tüübituletus neljandat järku loogikavalemitele}
+\begin{otherinfo}{estonian}{Tüübituletus neljandat järku loogikavalemitele \todo{Fill in title in other language.}}
 \begin{abstract}
-% TODO: Add abstract in other language.
-\TODO{One or two sentences providing a basic introduction to the field, comprehensible to a scientist in
-any discipline.}
-\TODO{Two to three sentences of
-more detailed background, comprehensible to scientists in related disciplines.}
-\TODO{One sentence clearly stating the general problem being addressed by this particular
-study.}
-\TODO{One sentence summarising the main result (with the words ``here we show´´ or their equivalent).}
-\TODO{Two or three sentences explaining what
-the main result reveals in direct
-comparison to what was thought to be the case previously, or how the main result adds to previous knowledge.}
-\TODO{One or two sentences to put the results into a more general context.}
-\TODO{Two or three sentences to provide a
-broader perspective, readily
-comprehensible to a scientist in any
-discipline, may be included in the first paragraph
-if the editor considers that the accessibility of
-the paper is significantly enhanced by their inclusion.}
+\TODO{Add abstract in other language.}%
 \end{abstract}
 
-% TODO: Add keywords in other language, separated by commas.
-\keywords{\TODO{List of keywords}}
+\keywords{\todo{Add keywords in other language, separated by commas.}}
 
-\cercs{\TODO{CERCS kood ja nimetus:~\url{https://www.etis.ee/Portal/Classifiers/Details/d3717f7b-bec8-4cd9-8ea4-c89cd56ca46e}}}
+% TODO: Choose CERCS from https://www.etis.ee/Portal/Classifiers/Index/26?. Common choices below.
+\cercs{P170 Arvutiteadus, arvutusmeetodid, süsteemid, juhtimine (automaatjuhtimisteooria) \todo{Choose CERCS.}}
+% \cercs{P175 Informaatika, süsteemiteooria}
 \end{otherinfo}
