Move example sections to separate file

--- a/thesis.tex
+++ b/thesis.tex
@@ -83,6 +83,7 @@
 % \listoftodos
 
 \input{sections/introduction}
+\input{sections/example}
 \input{sections/section2}
 \input{sections/figures}
 \input{sections/other-data}
