Rename example sections

--- a/sections/example.tex
+++ b/sections/example.tex
@@ -1,26 +1,24 @@
-\section{Title of Section 2}
+\section{My Second Section}
 \TODO{Short description of what this section is about}
+\TODO{Rule: If you divide the text into subsections (or subsubsections), then there has to be at least two of them, otherwise do not create any.}
 
 
-\subsection{Title of Subsection 1}
-
-Some text...
-
-\subsubsection{Title of Subsubsection 1}
+\subsection{My First Subsection}
 
 Some text...
 
-\subsubsection{Title of Subsubsection 2}
+\subsubsection{My First Subsubsection}
+
+Some text...
+
+\subsubsection{My Second Subsubsection}
 
 Some text...
 
 
+\subsection{My Second Subsection}
 
-\subsection{Title of Subsection 2}
+Tip: You can also use paragraphs.
+\paragraph{My First Paragraph.} Some text...
 
-Rule: If you divide the text into subsections (or subsubsections), then there has to be at least two of them, otherwise do not create any.
-
-Tip: You can also use paragraphs, e.g.
-\paragraph{Type rules for integers.} Some text ...
-
-\paragraph{Type rules for rational numbers.} Some text here too...
+\paragraph{My Second Paragraph.} Some text...
