--- a/thesis.tex
+++ b/thesis.tex
@@ -84,7 +84,7 @@
 
 \input{sections/introduction}
 \input{sections/example}
-\input{sections/section2}
+\input{sections/references-citations}
 \input{sections/figures}
 \input{sections/other-data}
 \input{sections/conclusion}
