--- a/sections/figures.tex
+++ b/sections/figures.tex
@@ -41,6 +41,7 @@ Tip: If you add a screenshot, then labeling the parts might help make the text m
 \begin{subfigure}[c]{0.45\textwidth}
 \includegraphics[width=\textwidth]{LCA_2_solutions}
 \caption{Example graph.}
+\label{fig:graph}
 \end{subfigure}
 \hfil
 % TODO: mixing subfigure and subtable in figure is odd
