Update bibliography examples

--- a/sections/references-citations.tex
+++ b/sections/references-citations.tex
@@ -34,3 +34,6 @@ For example, \textcite{certiCrypt} have developed CertiCrypt.
 
 BibLaTeX takes care of the rest automatically: it numbers/names bibliography entries for citations and produces a matching bibliography section with only cited entries.
 See TODOs in \verb|thesis.tex| to change the citation and bibliography style (numeric or alphabetic).
+
+% Examples from thesis guidelines.
+\nocite{ex5,ex6,ex7,ex8,ex9,ex10,ex11,ex12,chatgpt,copilot}
