--- a/thesis.bib
+++ b/thesis.bib
@@ -48,64 +48,55 @@
   note = {\url{http://eprint.iacr.org/}}
 }
 
-@comment{jabref-meta: selector_review:}
 
-@comment{jabref-meta: selector_publisher:}
-
-@comment{jabref-meta: selector_author:}
-
-@comment{jabref-meta: selector_journal:}
-
-@comment{jabref-meta: selector_keywords:}
+% Examples from thesis guidelines.
 
 @book{ex5,
   author = {Ain Isotamm},
-  publisher = {Tartu Ülikooli Kirjastus},
   title = {Programmeerimiskeeled},
-  year = {2017},
   location = {Tartu},
+  publisher = {Tartu Ülikooli Kirjastus},
+  year = {2007}
 }
 
 @thesis{ex6,
-  type = {bathesis},
-  author = {E.-L. Margens},
+  author = {Este-Liin Margens},
   title = {Informaatikaõpetajate täiendkoolituse küsitluse ettevalmistamine ja katsetamine},
-  year = {2005},
   institution = {TÜ arvutiteaduse instituut},
+  type = {bathesis},
+  year = {2015},
   url = {https://comserv.cs.ut.ee/ati_thesis/datasheet.php?id=46781&year=2015},
   urldate = {2024-10-13}
 }
 
 @incollection{ex7,
-  author = {J. Engelbrecht},
-  booktitle = {Teadusmõte Eestis: tehnikateadused},
-  publisher = {Eesti
-Teaduste Akadeemia},
+  author = {Jüri Engelbrecht},
   title = {Mehaanika --- lõputu hulk uusi probleeme},
-  year = {2002},
+  booktitle = {Teadusmõte Eestis: tehnikateadused},
   location = {Tallinn},
+  publisher = {Eesti Teaduste Akadeemia},
+  year = {2002},
   pages = {21-24},
   langid = {estonian}
 }
 
 @article{ex8,
-  author = {H.-J. Kaalep and M. Koit},
+  author = {Heiki-Jaan Kaalep and Mare Koit},
+  title = {Kuidas masin tõlgib},
   journal = {Keel ja Kirjandus},
   number = {10},
-  title = {Kuidas masin tõlgib},
   year = {2010},
-  pages = {726-738},
+  pages = {726-738}
 }
 
 @incollection{ex9,
-  author = {S. Virkus},
-  booktitle = {Infofoorum},
-  publisher = {},
+  author = {Sirje Virkus},
   title = {Infokirjaoskus ja infokäitumine infouuringute kontekstis: I},
+  booktitle = {Infofoorum},
+  number = {7},
   year = {2003},
   url = {http://www.tlu.ee/i-foorum/ifoorum7/Artiklid/sirje.htm},
-  urldate = {2005-06-20},
-  number = {7}
+  urldate = {2005-06-20}
 }
 
 @online{ex10,
